--- a/prepros.config
+++ b/prepros.config
@@ -22,7 +22,7 @@
     },
     "watcher": {
       "enable": true,
-      "maxFiles": 2000,
+      "maxFiles": 3000,
       "usePolling": false,
       "pollingInterval": 500,
       "extensions": [
@@ -890,8 +890,8 @@
         "file": "assets/sass/style.scss",
         "config": {
           "tasks": {
-            "minify-css": {
-              "enable": true
+            "autoprefixer": {
+              "enable": false
             }
           }
         }
